More code added

--- a/Data Processing/Data Processing CSV file.ipynb
+++ b/Data Processing/Data Processing CSV file.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Carga de Librerias"
+    "## Carga de Librerías"
    ]
   },
   {
@@ -63,6 +63,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Transformación de datos categóricos a numéricos para una columna categórica\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "columna_categorica_numerica = label_encoder.fit_transform(data_archivo[\"columna_categorica\"])\n",
+    "data_archivo[\"columna_categorica\"] = columna_categorica_numerica\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Transformación de datos categóricos a numéricos para varias columnas categóricas\n",
+    "\n",
+    "labelencoder_categoricas = {}\n",
+    "for columna in data_archivo.columns:\n",
+    "    if data_archivo[columna].dtype == \"object\":\n",
+    "        labelencoder_categoricas[columna] = LabelEncoder()\n",
+    "        data_archivo[columna] = labelencoder_categoricas[columna].fit_transform(obesidad_datos[columna].astype(str))\n",
+    "\n",
+    "data_archivo.head(10) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Comprobamos si faltan valores en el dataframe mediante distintas funciones\n",
     "\n",
     "data_archivo.info()\n",
@@ -113,6 +139,63 @@
     "\n",
     "print(f\"Número total de valores nulos: {total_nan}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Estandarización de los datos\n",
+    "scaler = StandardScaler() # Crea una instancia de StandardScaler\n",
+    "\n",
+    "# Estandariza los datos utilizando la instancia de StandarScaler\n",
+    "data_standardized = scaler.fit_transform(datos_imputados)\n",
+    "\n",
+    "# Muestra los datos estandarizados\n",
+    "data_standardized[10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definimos la semilla aleatoria\n",
+    "\n",
+    "random_seed = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Primero comprobaremos los distintos componentes del PCA para luego elegir\n",
+    "\n",
+    "pca = PCA()\n",
+    "datos.pca = pca.fit_transform(datos_imputados)\n",
+    "\n",
+    "# Creamos una visualización de estos componentes principales\n",
+    "\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "x = range(1, len(pca.explained_variance_ratio_)+1)\n",
+    "y = pca.explained_variance_ratio.cumsum()\n",
+    "plt.plot(x, y, marker='o', linestyle='--')\n",
+    "plt.title('Varianza explicada por los componentes')\n",
+    "plt.xlabel('Número de componentes')\n",
+    "plt.ylabel('Varianza explicada acumulada')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
